--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mariadb": "^3.0.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16"
   }
