--- a/app/package.json
+++ b/app/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "modern-agile-todo-task-4term",
-  "version": "1.0.0",
-  "description": "<br>",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./bin/www.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/modern-agile-team/modern-agile-todo-task-4term.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/modern-agile-team/modern-agile-todo-task-4term/issues"
-  },
-  "homepage": "https://github.com/modern-agile-team/modern-agile-todo-task-4term#readme",
-  "dependencies": {
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "mysql2": "^2.3.3",
-    "nodemon": "^2.0.16"
-  }
+    "name": "modern-agile-todo-task-4term",
+    "version": "1.0.0",
+    "description": "<br>",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon ./bin/www.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/modern-agile-team/modern-agile-todo-task-4term.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/modern-agile-team/modern-agile-todo-task-4term/issues"
+    },
+    "homepage": "https://github.com/modern-agile-team/modern-agile-todo-task-4term#readme",
+    "dependencies": {
+        "body-parser": "^1.20.0",
+        "dotenv": "^16.0.1",
+        "ejs": "^3.1.8",
+        "express": "^4.18.1",
+        "mysql": "^2.18.1",
+        "mysql2": "^2.3.3",
+        "nodemon": "^2.0.16",
+        "winston": "^3.8.0"
+    },
+    "bin": {
+        "modern-agile-todo-task-4term": "bin/www.js"
+    }
 }
